<resources>
    <string name="app_name">Illuminate0.4</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="set_permissions">Set Permissions</string>
    <string name="my_installed_apps">My Installed Apps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
